# Grapher

./: CMakeLists.txt  Camera.cpp  Camera.h  README.md  main.cpp
Math/: Matrix4.cpp  Matrix4.h  TransformationMatrix.cpp  TransformationMatrix.h  Vector3.cpp  Vector3.h
Pipelines/: LinePipeline.cpp  LinePipeline.h  MeshPipeline.cpp  MeshPipeline.h  Pipeline.cpp  Pipeline.h  VolumePipeline.cpp  VolumePipeline.h
Plots/: ColorField.cpp  ColorField.h  Curve.cpp  Curve.h  IsoSurface.cpp  IsoSurface.h  Surface.cpp  Surface.h
Renderables/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  Volume.cpp  Volume.h
